# ObEngine

./: CMakeLists.txt
assets/shaders/: forward_3d.vert  forward_3d.vert.spv
includes/engine/: engine.hpp
includes/log/: log.hpp
includes/rhi/: renderer.hpp  vulkan_renderer.hpp
includes/scene/: Components.hpp  Scene.hpp
includes/utils/: io.hpp
includes/windowing/: glfw_window.hpp  window.hpp
sandbox/: main.cpp
src/core/engine/: engine.cpp
src/core/log/: log.cpp
src/core/window/: glfw_window.cpp
src/rhi/vulkan/: GraphicsPipeline.cpp  Mesh.cpp  Render.cpp  RenderPass.cpp  Swapchain.cpp  VmaImpl.cpp  VulkanRenderer.cpp
